# Atlas

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  client.config  server.config  vcpkg.json
assets/animations/: animations.json
assets/animations/pawns/: walk_down.json  walk_left.json  walk_right.json  walk_up.json
assets/shaders/: fragment_full.glsl  postprocess.glsl  render.glsl
client/: CMakeLists.txt
client/src/: ClientMain.cpp
client/src/UI/: Button.hpp  UIComponent.hpp  UIComponents.hpp  UIElement.hpp  UIForward.hpp  UIStyle.hpp  UISystem.hpp
client/src/core/: AtlasClient.cpp  AtlasClient.hpp  ClientApplication.cpp  ClientApplication.hpp  ClientNetworkManager.cpp  ClientNetworkManager.hpp  GameManager.cpp  GameManager.hpp
client/src/ecs/: Actor.hpp  Components.hpp  Registry.hpp  System.hpp  View.hpp
client/src/levels/: GameModeScene.cpp  GameModeScene.hpp  LevelScene.hpp  LoadingScene.hpp  LoginScene.cpp  LoginScene.hpp  MapScene.cpp  MapScene.hpp  MatchScene.cpp  MatchScene.hpp  MenuScene.cpp  MenuScene.hpp  RegisterScene.cpp  RegisterScene.hpp
client/src/network/: ClientNetworkManager.hpp  ClientNetworkService.cpp  ClientNetworkService.hpp  ClientRequest.hpp  Packet.hpp
client/src/renderer/: Camera.cpp  Camera.hpp  CameraController.hpp  Color.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  ImGuiLayer.cpp  ImGuiLayer.h  MapRenderer.hpp  RenderBatch.cpp  RenderBatch.hpp  RenderManager.cpp  RenderManager.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shapes.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
client/src/resource/: ResourceCache.hpp  ResourceManager.hpp
client/src/scene/: CameraController.hpp  Scene.hpp
client/src/system/: AnimationSystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp  PawnSystem.cpp  PawnSystem.hpp  RenderSystem.hpp  UISystem.hpp
client/src/window/: FileDialogs.cpp  FileDialogs.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
dependencies/glad/: CMakeLists.txt
engine/: CMakeLists.txt
engine/src/: Atlas.hpp
engine/src/UI/: TextBox.hpp  UIManager.hpp
engine/src/backend/: SFMLFont.cpp  SFMLFont.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  SFMLTexture.cpp  SFMLTexture.hpp  SFMLWindow.cpp  SFMLWindow.hpp
engine/src/component/: Components.hpp
engine/src/core/: Core.hpp  KeyCodes.hpp  Keyboard.hpp  Log.cpp  Log.hpp  Mouse.hpp  MouseCodes.hpp  PlatformUtils.cpp  PlatformUtils.hpp  Window.cpp  Window.hpp
engine/src/ecs/: Actor.hpp  ECSException.hpp  EventManager.hpp  Registry.hpp
engine/src/entity/: Components.hpp  Entity.cpp  Entity.hpp
engine/src/event/: Event.hpp  EventManager.hpp  KeyEvents.hpp  MouseEvent.hpp
engine/src/map/: MapModification.hpp  MapState.hpp  MapTile.hpp
engine/src/network/: ClientNetworkManager.hpp  NetworkSystem.cpp  NetworkSystem.hpp  Packet.cpp  Packet.hpp  Request.hpp
engine/src/renderer/: Camera.cpp  Camera.hpp  Color.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  ImGuiLayer.cpp  RenderBatch.cpp  RenderBatch.hpp  RenderManager.cpp  RenderManager.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shapes.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
engine/src/resource/: Animation.hpp  ResourceBundle.cpp  ResourceBundle.hpp  ResourceManager.cpp  ResourceManager.hpp
engine/src/scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.hpp
engine/src/utils/: Config.cpp  Config.hpp  ExecutorService.cpp  ExecutorService.hpp  FileSystem.cpp  FileSystem.hpp  PlatformUtils.cpp  PlatformUtils.hpp  Time.hpp  UUID.cpp  UUID.hpp  Uuid.cpp  Uuid.hpp
matchmaker/: CMakeLists.txt
matchmaker/src/: Glicko2.cpp  Glicko2.hpp  LobbyMatchQuality.hpp  MatchmakerMain.cpp  Matchmaking.hpp  MatchmakingManager.hpp  dllmain.cpp
server/: CMakeLists.txt
server/src/: ServerMain.cpp
server/src/core/: AtlasServer.cpp  AtlasServer.hpp  Client.hpp  CommandHandler.cpp  CommandHandler.hpp  CoreServer.hpp  CrowLogger.cpp  CrowLogger.hpp  DatabaseManager.cpp  DatabaseManager.hpp  Lobby.cpp  Lobby.hpp  Log.cpp  Log.hpp  Packet.hpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  Server.cpp  Server.hpp  ServerNetworkManager.cpp  ServerNetworkManager.hpp  ServerNetworkService.hpp
server/src/data/: DatabaseManager.hpp  Match.hpp  Player.hpp  PlayerService.cpp  PlayerService.hpp
server/src/fireball/: FireballCollision.hpp  FireballData.hpp  FireballManager.hpp
server/src/map/: MapGenerator.hpp  MapManager.hpp
server/src/matchmaking/: MatchmakingManager.hpp
server/src/network/: Lobby.cpp  Lobby.hpp  Packet.hpp  ServerNetworkService.cpp  ServerNetworkService.hpp  ServerRequest.hpp  ServerRouteHandler.hpp
